Added custom next messages, new logic for phones.

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <p>Front Side</p>
+                        <p>Se incarca intrebarea...</p>
                     </div>
                     <div class="card-back">
-                        <p>Back Side</p>
+                        <p>Se incarca raspunsul...</p>
                     </div>
                 </div>
             </div>
             <button class="number-button">Score</button>
-            <button class="next-button">Next Question</button>
+            <button class="next-button">Next</button>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
