Added json file to carry input.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <p>Se incarca intrebarea...</p>
+                        <p>Apasa pe Next pentru a incepe</p>
                     </div>
                     <div class="card-back">
-                        <p>Se incarca raspunsul...</p>
+                        <p>Pe Next nu pe asta...</p>
                     </div>
                 </div>
             </div>
-            <button class="number-button">Score</button>
+            <button class="number-button">↓ ↓ ↓</button>
             <button class="next-button">Next</button>
         </div>
     </div>
