Added button for switching courses.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
     <div id="app">
         <div class="card-container">
+            <button class="switch-course">Antro</button>
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <p>Apasa pe Next pentru a incepe</p>
+                        <p>Selecteaza materia si apasa pe Next pentru a incepe</p>
                     </div>
                     <div class="card-back">
                         <p>Pe Next nu pe asta...</p>
