--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="app">
         <div class="card-container">
-            <button class="switch-course">Antro</button>
+            <button class="switch-course">Web</button>
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
