--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 </div>
             </div>
             <button class="number-button">↓ ↓ ↓</button>
+            <button class="score-button">✅ </button>
             <button class="next-button">Next</button>
         </div>
     </div>
