--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <p>Selecteaza materia si apasa pe Next pentru a incepe</p>
+                        <!-- <p></p> -->
                     </div>
                     <div class="card-back">
-                        <p>Pe Next nu pe asta...</p>
+                        <!-- <p></p> -->
                     </div>
                 </div>
             </div>
@@ -25,6 +25,8 @@
             <button class="next-button">Next</button>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/MotionPathPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="app.js"></script>
 </body>
